Fixed error popup not showing

--- a/style.css
+++ b/style.css
@@ -246,7 +246,8 @@ a {
 }
 
 #error {
-	display: block;
+	opacity: 1;
+	pointer-events: all;
 }
 
 @media (prefers-color-scheme: dark) {
